# krabi

./: .clang-format  .gitmodules  README.md  notes.md  vcs.repos
krabi_bringup/: CMakeLists.txt  map_base_link.pgm  map_inverted_lidar.pgm  map_inverted_lidar.yaml  map_inverted_lidar2022.pgm  package.xml  pixel_art.pgm  pixel_art.yaml
krabi_bringup/config/: calibrationdata_rpicam3_800x600.yaml  custom_rosconsole.conf  is_blue.yaml  is_yellow.yaml
krabi_bringup/launch/: Find Results  aruco_launch.yaml  camera.launch  iris_lama.launch  krabi_amcl.py  krabi_aruco.py  krabi_hardware_launch.py  krabi_launch.py  krabi_lidars_launch.py  krabi_main_launch.py  krabi_simu_launch.py  krabi_start_simu.py  kraboss.launch  krabossColor.launch  krabossHardware.launch  krabossMain.launch  krabossSimu.launch  robot_loc.launch  sick_tim_krabi.launch  tim_loc.launch  tim_loc_launch.py  tim_obstacles.launch  tim_obstacles_launch.py  transforms_launch.py  transforms_launchKV2.py
krabi_bringup/map/: pixel_art_2026.pgm  pixel_art_2026.yaml
krabi_bringup/params/: ekf_template_krabi.yaml
krabi_bringup/rviz/: log_replay.rviz
krabi_bringup/src/: tirette.py
map/: enfinputin.pgm  enfinputin.yaml  map_coin.pgm  map_coin.yaml
patches/: changes.krabi_description.patch  eurobot2020_gazebo.patch  ezbotv2.patch
