<?xml version="1.0"?>
<package format="2">
  <name>krabi_bringup</name>
  <version>0.0.0</version>
  <description>The bringup to launch krabbi robots</description>

  <maintainer email="yanis.mazouz.ros@yanis.33mail.com">Yanis Mazouz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lidar_strategy</exec_depend>
  <exec_depend>main_strategy</exec_depend>
  <exec_depend>goal_strategy</exec_depend>
  <exec_depend>krabby_description</exec_depend>



  <export>
  </export>
</package>
