<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>krabi_bringup</name>
  <version>0.0.0</version>
  <description>The bringup package for krabi robot</description>

  <maintainer email="victor.dubois@free.fr">Victor Dubois</maintainer>

  <license>MIT</license>

  <!--<depend>eurobot2020_gazebo</depend>-->


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>ros2launch</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <!--<build_type>ament_python</build_type>-->
  </export>
</package>
